# conversimp

./: Dockerfile  LICENSE.md  README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  Dockerfile  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Table/: index.jsx
